<resources>
    <string name="app_name">mymessenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_name">Aljoscha</string>
    <string name="settings_status">Online</string>
    <string name="settings_label_phone_number">Tap to edit phone number</string>
    <string name="settings_login_default">@username</string>
    <string name="settings_label_login">Tap to change login</string>
    <string name="settings_menu_change_name">Change name</string>
    <string name="settings_menu_logout">Logout</string>
    <string name="chat_blob_image_content_desc">chat_blob_image</string>
    <string name="register_please_enter_code_text">Please input your code</string>
    <string name="register_text_we_sent">We\'ve sent you a code to a phone number</string>
    <string name="register_hint_enter_code">- - - - - -</string>
    <string name="register_title_your_phone">Your phone</string>
    <string name="register_toast_enter_your_number">Input phone number please</string>
    <string name="register_toast_code_verified">The code is verified!</string>
    <string name="settings_hint_input_name">Name</string>
    <string name="settings_hint_input_surname">Surname</string>
    <string name="settings_toast_empty_name">Enter your name please</string>
    <string name="settings_toast_change_name_success">Info was successfully updated</string>
    <string name="settings_hint_username">Username</string>
    <string name="settings_hint_bio">bio</string>
</resources>