<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterPhoneNumberFragment">

    <ImageView
        android:id="@+id/register_chat_blob_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_large"
        android:contentDescription="@string/chat_blob_image_content_desc"
        android:src="@drawable/ic_register_chat_blob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_please_code_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_please_enter_code_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_body"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_chat_blob_image" />

    <TextView
        android:id="@+id/register_we_sent_code_text"
        style="@style/text_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/margin_vertical"
        android:gravity="center"
        android:text="@string/register_text_we_sent"
        android:textColor="@color/md_grey_600"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_please_code_text" />

    <EditText
        android:id="@+id/register_edit_code"
        android:hint="@string/register_hint_enter_code"
        style="@style/edit_text"
        android:layout_marginTop="@dimen/margin_vertical"
        android:autofillHints="sms_code"
        android:gravity="center"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_we_sent_code_text"
        android:inputType="number" />

</androidx.constraintlayout.widget.ConstraintLayout>